--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".View_Appointments"></activity>
+        <activity android:name=".View_Workouts"></activity>
         <activity android:name=".Trainer_Details" />
         <activity android:name=".View_Trainers" />
         <activity android:name=".User_Registration" />
